--- a/code/css/contact.css
+++ b/code/css/contact.css
@@ -50,7 +50,7 @@ body{
   min-height: 700px;
   /* width: 100%; */
   background-size: cover;
-  background-image: url("img/contact/profile1.png");
+  background-image: url("(../../img/contact/profile1.png");
   background-size: 80%;
   background-attachment: fixed;
   background-repeat: no-repeat;
@@ -69,7 +69,7 @@ body{
 }
 
 .square:hover + .main{
-  background-image: url("img/contact/profile2.png");
+  background-image: url("(../../img/contact/profile2.png");
 }
 
 
