--- a/styles/ghp.css
+++ b/styles/ghp.css
@@ -56,7 +56,7 @@ hr {
 }
 
 .ghpTitle {
-  background-image: url(../../img/ghp/bubbles.jpg);
+  background-image: url(../img/ghp/bubbles.jpg);
   padding: 5%;
   color: white;
   font-size: 3vh;
